# TaskMergeTrees

./: README.md  runReplicabilityStamp.sh
code/: LICENSE  run
code/HPX-Contour-Trees-master/: .gitignore  Augmentation.h  Boundary.h  CMakeLists.txt  DataManager.cpp  DataManager.h  Log.h  TreeConstructor.cpp  TreeConstructor.h  profiler.h  simplification.h
code/HPX-Contour-Trees-master/CUDA/: CMakeLists.txt  TreeConstructor.cu  TreeConstructor.h  main.cpp
code/HPX-Contour-Trees-master/HPX/: Arc.h  CMakeLists.txt  DataManager.cpp  DistVec.h  Log.h  SweepQueue.h  TreeConstructor.cpp  TreeConstructor.h  main.cpp
code/HPX-Contour-Trees-master/HPX-local/: Arc.h  Augmentation.h  Boundary.h  CMakeLists.txt  DataManager.h  SweepQueue.h  TreeConstructor.cpp  Visualizer.h  main.cpp
code/HPX-Contour-Trees-master/data/: 042_density_042_064_2.0.raw
code/HPX-Contour-Trees-master/data/CUDA/: .cproject  .project  DataManager.h  Visualizer.h
code/HPX-Contour-Trees-master/data/CUDA/myBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
code/HPX-Contour-Trees-master/data/HPX/: Arc.h  Augmentation.h  Boundary.h  CMakeLists.txt  DataManager.cpp  DataManager.h  Log.h  SweepQueue.h  TreeConstructor.cpp  TreeConstructor.h  main.cpp
code/HPX-Contour-Trees-master/data/HPX-local/: Augmentation.h  CMakeLists.txt  DataManager.h  TreeConstructor.h  Visualizer.h  design.h  main.cpp
code/HPX-Contour-Trees-master/data/paper/MasterThesis/: CleanThesis.aux  CleanThesis.bbl  CleanThesis.bcf  CleanThesis.blg  CleanThesis.out  CleanThesis.run.xml  CleanThesis.tex  CleanThesis.toc  Thesis.aux  Thesis.bbl  Thesis.blg  Thesis.tex  Thesis.toc  bib.bib  images
code/HPX-Contour-Trees-master/data/paper/MasterThesis/cleanthesis-0.3.1/: thesis-example.tex
code/HPX-Contour-Trees-master/data/paper/MasterThesis/gfx/: TUKL_LOGO_FELD_LINKS_4C.eps
code/HPX-Contour-Trees-master/data/paper/SupervisedResearch/: SupervisedResearch.tex
code/HPX-Contour-Trees-master/data/paper/notebooks/: Untitled.ipynb
code/HPX-Contour-Trees-master/data/paper/notebooks/.ipynb_checkpoints/: DataSetResults-checkpoint.ipynb
code/HPX-Contour-Trees-master/paper/MasterThesis/: CleanThesis.tex  Thesis.tex
code/HPX-Contour-Trees-master/paper/SupervisedResearch/: bib.bib
code/HPX-Contour-Trees-master/paper/notebooks/: DataSetResults.ipynb
code/HPX-Contour-Trees-master/paper/notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
code/src/: Arc.h  CMakeLists.txt  DataManager.cpp  DistVec.h  Log.h  SweepQueue.h  TreeConstructor.cpp  TreeConstructor.h  main.cpp
environment/: Dockerfile  postInstall
metadata/: metadata.yml
